<resources>
    <string name="app_name">Choose-Your-Own-Adventure</string>
    <string name="start">START</string>
    <string name="statistics">STATISTICS</string>
    <string name="settings">SETTINGS</string>
    <string name="teamname">teamName</string>
    <string name="title">Title</string>
    <string name="quince_bielka">Quince Bielka</string>
    <string name="dina_zeng">Dina Zeng</string>
    <string name="settingsSettings">Settings</string>
    <string name="settingsStatistics">Statistics</string>
    <string name="reset_game">Reset Game</string>
    <string name="game_settings">Game Settings</string>
    <string name="switchOption1">Switch</string>
    <string name="switchOption2">Switch</string>
    <string name="switchOption3">Switch</string>
    <string name="lead_developer">Lead Developer</string>
    <string name="picture_of_dina">Picture of Dina</string>
    <string name="developer">Developer</string>
    <string name="picture_of_author">Picture of Author</string>
    <string name="writer_name_here">writer name here</string>
    <string name="writer">Writer</string>
    <string name="picture_of_quince">Picture of Quince</string>
    <string name="statistics5">statistics5</string>
    <string name="statistics4">statistics4</string>
    <string name="statistics3">statistics3</string>
    <string name="statistics2">statistics2</string>
    <string name="statistics1">statistics1</string>
</resources>