<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/statistics_title"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/statistics" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:barrierDirection="top" />

        <TextView
            android:id="@+id/stat1"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/statistics1" />

        <TextView
            android:id="@+id/stat2"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/statistics2" />

        <TextView
            android:id="@+id/stat3"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/statistics3" />

        <TextView
            android:id="@+id/stat4"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/statistics4" />

        <TextView
            android:id="@+id/stat5"
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/statistics5" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>