<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <TextView
            android:id="@+id/menuAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/title"
            android:gravity="center_horizontal" />

        <ImageView
            android:id="@+id/QuincePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/QuinceAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/quince_bielka" />

        <ImageView
            android:id="@+id/DinaPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/DinaAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:text="@string/dina_zeng" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>